<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seg_ui_semibold"
                android:textColor="@color/colorTextWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:elevation="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/Black"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="59dp"
            android:fontFamily="@font/gotham"
            android:gravity="center"
            android:text="@string/welcome_back_to_your_own_travel_assistant"
            android:textColor="@color/gray"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="401dp"
            android:layout_height="376dp"
            android:layout_centerVertical="true"
            android:background="@color/WhiteSmoke"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/user_icon"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:inputType="textPassword"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/White"
                android:drawableEnd="@drawable/lock_icon"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/password"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/black"
                android:visibility="visible" />


            <TextView
                android:id="@+id/forgotten_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="265dp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/colorBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/signin_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundbutton"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:gravity="center"
                    android:text="@string/sign_in1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="94dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gotham"
                android:gravity="center"
                android:text="@string/or_sign_in_with"
                android:textColor="@color/gray"
                android:textSize="10sp" />

            <Button
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_marginStart="105dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/WhiteSmoke"
                android:fontFamily="@font/seg_ui_semibold"
                android:gravity="center"
                android:text="Continue with Google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="26dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="Don't have an account? "
                android:textColor="@color/black"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="Sign Up Here!"
                android:textColor="@color/DarkOrange"
                android:textSize="12dp" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
